2009-11-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* process.c (ifflag_def): Make flag_sym constant.
	(Fnetwork_interface_info): Use a constant pointer.
	(ifflag_table):
	* xfns.c (cursor_bits):
	* xdisp.c (power_letter):
	* termcap.c (speeds, esctab):
	* sysdep.c (baud_convert):
	* keyboard.c (lispy_accent_codes, modifier_names):
	* image.c (xbm_format, xpm_format, pbm_format, png_format)
	(jpeg_format, tiff_format, gif_format, svg_format)
	(interlace_start, interlace_increment, gs_format):
	* gtkutil.c (separator_names):
	* fringe.c (swap_nibble):
	* fns.c (base64_value_to_char, base64_char_to_value):
	* fileio.c (make_temp_name_tbl):
	* coding.c (suffixes): Make constant.

	* frame.c (make_initial_frame):
	* buffer.c (init_buffer_once): Use make_pure_c_string instead of
	build_string.
	* alloc.c (syms_of_alloc): Build Vmemory_signal_data in pure memory.

	* s/freebsd.h:
	* s/netbsd.h: Remove code referring to non-existent file: unexsunos4.o.

	* Makefile.in: Add dependencies to lisp.h.  Remove dependencies
	for non-existent files: unexmips.c, unexnext.c, abbrev.c, malloc.c.

	* xfns.c (syms_of_xfns): Use make_pure_string instead of build_string.
	* xterm.c (syms_of_xterm):
	* xfaces.c (syms_of_xfaces):
	* xdisp.c (syms_of_xdisp):
	* lread.c (syms_of_lread):
	* keyboard.c (syms_of_keyboard): Use make_pure_c_string instead of
	build_string.

	* doc.c (Fsnarf_documentation): Purecopy Vbuild_files.

2009-11-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fns.c (Fplist_get): Merge the active and the uncommented code.

2009-11-10  Jan Djärv  <jan.h.d@swipnet.se>

	* keyboard.h: Declare timer_check.

	* keyboard.c (timer_check_2): New function that does what the old
	timer_check did.
	(timer_check): Call timer_check_2 until -1 or a non-zero time is
	returned, i.e. don't return -1 with timers pending.

	* process.c: Remove extern declaration of timer_check.

	* xmenu.c (x_menu_wait_for_event): Remove code that did a timeout
	even if timer_check returned -1.
